# Robile

./: .gitmodules  .readthedocs.yaml  README.md  README.txt
docs/: conf.py  getting_started.rst  index.rst
docs/source/: conf.py  getting_started.rst  index.rst  introdcution.rst  introduction.rst
docs/source/Hardware/: architecture.rst  index.rst
docs/source/Turorial/: architecture.rst  index.rst
docs/source/Tutorial/: Demo Communication.rst  Demo Localization.rst  Demo Mapping.rst  Demo Navigation.rst  Demo Simulation.rst  Demo localization.rst  index.rst
robile_behaviors/: CMakeLists.txt  README.md  package.xml  setup.py
robile_behaviors/ros/launch/: autonomous_mapping.launch  wall_follower.launch
robile_behaviors/ros/scripts/: autonomous_mapping  battery_voltage_publisher  marker_line  wall_following
robile_behaviors/ros/src/behavior_tree/: behaviors.py  utils.py
robile_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robile_bringup/launch/: robile1.launch.py  robile1.xml  robot.launch.py  robot.xml
robile_bringup/ros/launch/: robile3.launch  robot.launch
robile_demos/robile_control_simple/: setup.cfg  setup.py
robile_demos/robile_control_simple/robile_control_simple/: robile_control_simple.py
robile_demos/robile_reach_goal/: setup.cfg  setup.py
robile_description/: CMakeLists.txt  README.md  package.xml
robile_description/gazebo/: gazebo_robile.xacro  gazebo_ros_control.xacro  gazebo_ros_planar_move.xacro
robile_description/robots/: 2_wheel_config.urdf.xacro  4_wheel_config.urdf.xacro  6_wheel_config.urdf.xacro  robile3.urdf.xacro  robile3_config.urdf.xacro
robile_description/urdf/base_macros/: brick_housing.urdf.xacro  kelo_drive.urdf.xacro  kelo_drive_wheel.urdf.xacro  passive_caster_wheel.urdf.xacro
robile_description/urdf/robile_bricks/: robile_active_wheel_brick.urdf.xacro  robile_passive_wheel_brick.urdf.xacro
robile_description/urdf/sensors/: sick_lms1xx_mount.urdf.xacro
robile_environments/robile_default_env_config/: CMakeLists.txt  package.xml
robile_environments/robile_default_env_config/ros/maps/: C069_partial.pgm  C069_partial.yaml  C069_partial2.pgm  C069_partial2.yaml
robile_environments/robile_default_env_config/worlds/: corners_world.world  corridor_C069_world.world
robile_gazebo/: CMakeLists.txt  README.md  package.xml
robile_gazebo/config/ros_controller/: 2_wheel_config.yaml  6_wheel_config.yaml  robile3_config.yaml
robile_gazebo/config/rviz/: robile.rviz  robile_wall_following.rviz
robile_gazebo/include/robile_gazebo/: KeloDrive.h  RobilePlatformController.h
robile_gazebo/launch/: 2_wheel_platform.launch  4_wheel_platform.launch  6_wheel_platform.launch  robile3_platform.launch
robile_gazebo/launch/platform_independent/: robile_gazebo.launch
robile_gazebo/src/: KeloDrive.cpp  RobilePlatformController.cpp  main.cpp
robile_navigation/: package.xml  setup.cfg  setup.py
robile_navigation/config/move_base_config/: base_local_planner_params.yaml  local_costmap_params.yaml
robile_navigation/launch/: amcl.launch.py  gmapping.launch.py  mir_settings.launch.py  move_base_dwa.launch.py  move_base_teb.launch.py
robile_navigation/robile_navigation/: CMakeLists.txt  package.xml
robile_navigation/robile_navigation_demo/: CMakeLists.txt  package.xml
robile_navigation/robile_navigation_demo/ros/config/: laser_sick_config.yaml
robile_navigation/robile_navigation_demo/ros/config/move_base_config/: costmap_common_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
robile_navigation/robile_navigation_demo/ros/launch/: amcl.launch  gmapping.launch  move_base_dwa.launch  move_base_teb.launch  wall_follower.launch
robile_navigation/robile_navigation_demo/ros/scripts/: final.py  final2.py  final5.py  final6.py  final7.py  final8.py  laserscan_reader.py  odom_listner.py  wall_follower.py  wall_follower1.py  wall_follower_simple.py
robile_perception/: CMakeLists.txt  package.xml
worksheets/worksheet01/: README.md
worksheets/worksheet01_assembling_the_platform/: README.md
worksheets/worksheet02/: README.md
worksheets/worksheet02_mapping_localization_navigation/: README.md
worksheets/worksheet02_mapping_the_environment/: README.md
worksheets/worksheet03_navigation_parameters_tuning/: README.md
worksheets/worksheet03_wall_following_application/: README.md
worksheets/worksheet04_wall_following_robot/: README.md
