<?xml version="1.0"?>
<package format="2">
  <name>robile_behaviors</name>
  <version>0.0.0</version>
  <description>The robile_behaviors package is used to store all behaviors implemented using behavior trees</description>


  <maintainer email="melody@todo.todo">melody</maintainer>



  <license>GPLv3</license>

  <author email="kishan.sawant@smail.inf.h-brs.de">Jane Doe</author>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>py_trees</build_depend>
  <build_depend>py_trees_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>py_trees</build_export_depend>
  <build_export_depend>py_trees_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>  

</package>
